<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小马快跑</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_operate">小马快跑</string>
    <string name="operate_txt_preferential">优惠活动</string>
    <string name="operate_txt_view">菜单浏览</string>
    <string name="operate_txt_begin">开始订餐</string>
    <string name="operate_txt_car">购物车</string>
    <string name="operate_txt_my">关于我的</string>
    <string name="title_activity_begin">Begin</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_preferential">Preferential</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_view">View</string>
    <string name="top_back">返回</string>
    <string name="top_next">下一步</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_info">使用手机号登录</string>
    <string name="login_nextlogn">下次自动登录</string>
    <string name="login_goodtips">友情提示</string>
    <string name="login_goodtips_tip1">如果您首次订餐,请输入您常用的手机号码,这将作为您今后登录的唯一用户信息,如有遗忘,您需要重新注册。</string>
    <string name="login_goodtips_tip2">如果您曾使用我们的订餐服务,请输入您上次使用的手机号码</string>
    <string name="login_goodtips_tip3">“下次自动登录”功能可使您无需登录即进入"送餐信息"页面,请妥善保管您的手机以免信息被不当使用</string>
    <string name="title_activity_delivery_info">DeliveryInfoActivity</string>
    <string name="delivery_info_customerName">顾客姓名</string>
    <string name="delivery_info_redio_man">先生</string>
    <string name="delivery_info_redio_woman">女士</string>
    <string name="delivery_info_login_password">登录密码</string>
    <string name="delivery_info_phone">联系电话</string>
    <string name="delivery_info_address">送餐地址</string>
    <string name="delivery_info_time">送餐时间</string>
    <string name="delivery_info_time_default">预计成功提交订单后,30分钟左右送达</string>
    <string name="delivery_info_time_custom">预约当日稍晚时间送餐</string>
    <string name="delivery_info_tip">您送餐地址的主要内容会以*号遮蔽,如:虹*...*2号。该信息可能不受保护,您可到小马快跑官方网站(www.xmkpzg.com)订购</string>
    <string name="car_orderdetail">订单详情</string>
    <string name="car_totalmoney">总金额:</string>
    <string name="car_orderaddressdetail">配送地址</string>
    <string name="form_back">返回</string>
    <string name="formName_delivery">送餐信息</string>
    <string name="formName_login">登录</string>
    <string name="form_delivery_go">进入菜单</string>
    <string name="form_login_next">下一步</string>
    <string name="title_activity_add_delivery">AddDeliveryActivity</string>
    <string name="btn_ok">确定</string>
    <string name="add_delivery_city">送餐城市</string>
    <string name="add_delivery_city_name">常州</string>
    <string name="add_delivery_xq">路名/小区名</string>
    <string name="add_delivery_xqdz_tip">请收入如地址关键字(如东方路),点击查找</string>
    <string name="add_delivery_xqdz_search">查找</string>
    <string name="add_delivery_xxdz">请继续填全(详细地址)</string>
    <string name="add_delivery_xxdz_tip">如:10楼A室,如此处与""路名/小区名"填写内容有矛盾,视为无效订单</string>
    <string name="add_delivery_goodstip1">请正确填写送餐城市。路名/小区名,我们将以此判断是否在送餐范围内;</string>
    <string name="add_delivery_goodstip2">尝试缩短或更改地址关键字进行查询(例:将"虹桥路2号"改为"虹桥");</string>
    <string name="add_delivery_goodstip3">检查输入的地址是否含空格。错别字。标点符号(括号除外)等。</string>
    <string name="title_activity_add_delivery_search">AddDeliverySearchActivity</string>
    <string name="dialog_select_address_top">选择本次送餐地址</string>
    <string name="dialog_select_payStyle_top">选择本次付款方式</string>
    <string name="title_activity_order_view">OrderViewActivity</string>
    <string name="my_orderview">订单查询</string>
    <string name="my_orderview_detail">订单详情</string>
    <string name="my_relogin">重新登录</string>
    <string name="car_peisongfei">配送费:</string>
    <string name="title_activity_order_view_detail">OrderViewDetailActivity</string>
    <string name="order_billnumber">订单号:</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="top_share">分享</string>
    <string name="top_myself">关于我们</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="member_hybm">会员编码：</string>
    <string name="member_hymc">会员名称：</string>
    <string name="member_phone">电话号码：</string>
    <string name="member_zhye">账户余额：</string>
    <string name="member_jf">积分：</string>
    <string name="my_member">会员信息</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="aboutus_dhhm">订购热线：</string>
    <string name="aboutus_dz">地址：</string>
    <string name="aboutus_dhhm_value">0519-85517217</string>
    <string name="aboutus_dz_value">科创路60-4 鸣凰国际大酒店向西200米</string>

</resources>