<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bg_color" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="3dip"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/btn_add_delivery_form_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="5dip"
                android:clickable="true"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/formName_delivery"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_add_delivery_form_ok"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dip"
            android:layout_weight="1.0"
            android:clickable="true"
            android:gravity="center_vertical|right"
            android:text="@string/btn_ok"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/linearlayout_style"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical|left"
                android:text="@string/add_delivery_city"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/add_delivery_city_name" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#bfbfbf" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_delivery_xq"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_style"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edit_addDelivery_xq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dip"
                    android:layout_weight="1.0"
                    android:background="@android:color/white"
                    android:hint="@string/add_delivery_xqdz_tip"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:paddingTop="2dip" />

                <Button
                    android:id="@+id/btn_addDelivery_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/add_delivery_xqdz_search" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#bfbfbf" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_delivery_xxdz"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linearlayout_style"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edt_XXDZ"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@android:color/white"
                    android:hint="@string/add_delivery_xxdz_tip"
                    android:paddingBottom="2dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:paddingTop="2dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/goodtip"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/login_goodtips"
                android:textColor="@color/top_bg_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/point"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:singleLine="false"
                android:text="@string/add_delivery_goodstip1"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/point"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:singleLine="false"
                android:text="@string/add_delivery_goodstip2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/point"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:singleLine="false"
                android:text="@string/add_delivery_goodstip3"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>