<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_relogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/linearlayout_style"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/my_relogin"
            android:drawablePadding="5dip"
            android:text="@string/my_relogin"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_icon"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_orderview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="5dip"
        android:background="@drawable/linearlayout_style"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/my_orderview"
            android:drawablePadding="5dip"
            android:text="@string/my_orderview"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_icon"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_member"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/linearlayout_style"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableLeft="@drawable/member"
            android:drawablePadding="5dip"
            android:text="@string/my_member"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_icon"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</LinearLayout>