<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bg_color"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip" >

            <ImageView
                android:id="@+id/btn_member_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="5dip"
                android:clickable="true"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/my_orderview_detail"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@drawable/linearlayout_style"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:gravity="center_vertical|right"
                android:text="@string/member_hybm"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_member_hybm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center_vertical|left"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:gravity="center_vertical|right"
                android:text="@string/member_hymc"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_member_hymc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center_vertical|left"
                
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:gravity="center_vertical|right"
                android:text="@string/member_phone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_member_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center_vertical|left"
                
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:gravity="center_vertical|right"
                android:text="@string/member_zhye"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_member_zhye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center_vertical|left"
                
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1.0"
                android:gravity="center_vertical|right"
                android:text="@string/member_jf"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_member_jf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:gravity="center_vertical|left"
                
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>